arregle el head y vistas

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -48,5 +48,5 @@
             </div>
             
         <%}%>
-            <div class="icons-desktop"><a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a></i></div>
+            <div class="icons-desktop"><a href="/products/carrito"><i class="fa-solid fa-cart-shopping"></i></a></i></div>
   </header>
