--- a/public/css/detalles.css
+++ b/public/css/detalles.css
@@ -144,10 +144,29 @@ main {
   margin: 0;
 }
 
-.formas-de-pago {
-  color: #666;
+.boton-agregar {
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  color: white;
+}
+
+.texto-agregar {
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   display: flex;
+}
+
+.medios-pago {
+  text-decoration: none;
+  color: #666;
   font-weight: bold;
+}
+
+.formas-de-pago {
+  display: flex;
   height: 30px;
   width: 40vw;
   max-width: 175px;
@@ -182,6 +201,8 @@ main {
 .imagenes-relacionados {
   width: 100%;
   height: 100%;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
 }
 
 .articulo-1 {
@@ -313,46 +334,22 @@ main {
     flex-grow: 0.4;
   }
 
-  .articulo-1 {
-    width: 20%;
-  }
-
-  .articulo-2 {
-    width: 20%;
-  }
-
-  .articulo-3 {
-    width: 20%;
-  }
-
-  .articulo-4 {
+  .articulo-rel {
     display: flex;
     width: 20%;
     flex-direction: column;
     align-items: center;
     border: solid 1px lightgray;
+    border-radius: 1em;
   }
 
   .sombras {
     box-shadow: none;
+    border-radius: 1em;
+    width: 100%;
   }
 
-  .articulo-1:hover .sombras {
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    transition: all 300ms ease-in-out;
-  }
-
-  .articulo-2:hover .sombras {
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    transition: all 300ms ease-in-out;
-  }
-
-  .articulo-3:hover .sombras {
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    transition: all 300ms ease-in-out;
-  }
-
-  .articulo-4:hover .sombras {
+  .articulo-rel:hover .sombras {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
     transition: all 300ms ease-in-out;
   }
