--- a/public/css/products.css
+++ b/public/css/products.css
@@ -101,6 +101,16 @@ main section article p {
   font-size: 16px;
 }
 
+.sombras {
+  box-shadow: none;
+  border-radius: 1em;
+}
+
+.sombras .div-producto:hover {
+  box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  transition: all 300ms ease-in-out;
+}
+
 @media screen and (min-width: 769px) {
   .display-pag {
     display: flex;
