--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,4 +1,8 @@
-<%- include("../partials/head.ejs") %>
+<head>
+  <%- include("../partials/head.ejs") %>
+  <link rel="stylesheet" href="/css/carrito.css" />
+</head>
+
 <body>
   <%- include("../partials/header.ejs") %>
   <main>
