--- a/src/views/users/editar-perfil.ejs
+++ b/src/views/users/editar-perfil.ejs
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Editar Perfil</title>
+    <%- include("../partials/head.ejs") %>
     <link rel="stylesheet" href="/css/editar-perfil.css" />
   </head>
   <body class="edit-profile">
     <h1>Editar perfil</h1>
-    <form action="/users/perfil?_method=PUT" method="POST" enctype="multipart/form-data">
+    <form
+      action="/users/perfil?_method=PUT"
+      method="POST"
+      enctype="multipart/form-data"
+    >
       <div class="errores">
         <ul></ul>
-    </div>
-      <div> 
+      </div>
+      <div>
         <label for="" class="edit-label">Nombre:</label><br />
         <input
           class="edit-input"
@@ -66,9 +67,7 @@
         id="password"
         name="password"
       /><br />
-      <label for="" class="edit-label"
-        >Confirmar contraseña:</label
-      ><br />
+      <label for="" class="edit-label">Confirmar contraseña:</label><br />
       <input
         class="edit-input"
         type="password"
@@ -76,16 +75,14 @@
         name="confirmPassword"
       /><br />
       <br />
-      <% if(locals.errors && errors.password) {%> 
-        <div class="text-danger">
-            <%= errors.password.msg %>
-        </div>
-    <% } %> 
-    <input class="edit-button" type="submit" value="Actualizar" />
-  </form>
-  <div class="back">
-    <a class="back-button"href="/users/perfil">Volver</a>
-  </div>
-  <script src="/js/editar-perfil.js"></script>
+      <% if(locals.errors && errors.password) {%>
+      <div class="text-danger"><%= errors.password.msg %></div>
+      <% } %>
+      <input class="edit-button" type="submit" value="Actualizar" />
+    </form>
+    <div class="back">
+      <a class="back-button" href="/users/perfil">Volver</a>
+    </div>
+    <script src="/js/editar-perfil.js"></script>
   </body>
 </html>
