--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -10,7 +10,7 @@
     <%- include("../partials/header.ejs") %>
 
     <main>
-      <div>
+      <div class="contenedor-main">
         <div>
           <h2>Formulario de creación de productos</h2>
         </div>
