--- a/src/views/products/editar-producto.ejs
+++ b/src/views/products/editar-producto.ejs
@@ -2,179 +2,182 @@
 <html lang="en">
   <head>
     <%- include('../partials/head.ejs')%>
-    <link rel="stylesheet" href="/css/editar-perfil.css" />
+    <link rel="stylesheet" href="/css/editar-product.css" />
   </head>
 
   <body>
     <%- include('../partials/header.ejs')%>
 
     <main>
-      <div>
+      <div class="contenedor-main">
         <div>
           <h2>Editar producto</h2>
         </div>
-        <form
-          class="contenedor-inputs"
-          action="/products/detalles/<%=product.id%>?_method=PUT"
-          method="POST"
-          enctype="multipart/form-data"
-        >
-          <div class="subtitulo">
-            <h3>Editando el Producto "<%= product.name %>"</h3>
-          </div>
 
-          <div class="label-input">
-            <label for="name">Nombre del producto:</label>
-            <input
-              type="text"
-              name="name"
-              class="form-input"
-              value="<%= product.name %>"
-            />
-            <% if(locals.errors && errors.name) {%>
-            <div class="text-danger"><%= errors.name.msg %></div>
-            <% } %>
-          </div>
+        <div class="contenedor-form">
+          <form
+            class="contenedor-inputs"
+            action="/products/detalles/<%=product.id%>?_method=PUT"
+            method="POST"
+            enctype="multipart/form-data"
+          >
+            <div class="subtitulo">
+              <h3>Editando el Producto "<%= product.name %>"</h3>
+            </div>
 
-          <div class="label-input">
-            <label for="price">Precio:</label>
-            <input
-              type="number"
-              step=".01"
-              name="price"
-              class="form-input"
-              value="<%= product.price %>"
-            />
-            <% if(locals.errors && errors.price) {%>
-            <div class="text-danger"><%= errors.price.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="name">Nombre del producto:</label>
+              <input
+                type="text"
+                name="name"
+                class="form-input"
+                value="<%= product.name %>"
+              />
+              <% if(locals.errors && errors.name) {%>
+              <div class="text-danger"><%= errors.name.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <label for="discount">Descuento:</label>
-            <input
-              type="number"
-              step=".01"
-              name="discount"
-              class="form-input"
-              value="<%= product.discount %>"
-            />
-            <% if(locals.errors && errors.discount) {%>
-            <div class="text-danger"><%= errors.discount.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="price">Precio:</label>
+              <input
+                type="number"
+                step=".01"
+                name="price"
+                class="form-input"
+                value="<%= product.price %>"
+              />
+              <% if(locals.errors && errors.price) {%>
+              <div class="text-danger"><%= errors.price.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <label for="discount">Tamaño:</label>
-            <select name="size" id="">
-              <% for (let i = 0; i < sizes.length; i++) { %> <% if (sizes[i].id
-              == product.size_id) { %>
-              <option value="<%= sizes[i].id %>" selected>
-                <%=sizes[i].name %>
-              </option>
-              <% } else { %>
-              <option value="<%= sizes[i].id %>"><%=sizes[i].name %></option>
-              <% } %> <% } %>
-            </select>
-            <% if(locals.errors && errors.size) {%>
-            <div class="text-danger"><%= errors.size.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="discount">Descuento:</label>
+              <input
+                type="number"
+                step=".01"
+                name="discount"
+                class="form-input"
+                value="<%= product.discount %>"
+              />
+              <% if(locals.errors && errors.discount) {%>
+              <div class="text-danger"><%= errors.discount.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <label for="name">Bodega:</label>
-            <select name="bodega" id="">
-              <% for (let i = 0; i < bodegas.length; i++) { %> <% if
-              (bodegas[i].id == product.bodega_id) { %>
-              <option value="<%= bodegas[i].id %>" selected>
-                <%=bodegas[i].name %>
-              </option>
-              <% } else { %>
-              <option value="<%= bodegas[i].id %>">
-                <%=bodegas[i].name %>
-              </option>
-              <% } %> <% } %>
-            </select>
-            <% if(locals.errors && errors.bodega) {%>
-            <div class="text-danger"><%= errors.bodega.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="discount">Tamaño:</label>
+              <select name="size" id="">
+                <% for (let i = 0; i < sizes.length; i++) { %> <% if
+                (sizes[i].id == product.size_id) { %>
+                <option value="<%= sizes[i].id %>" selected>
+                  <%=sizes[i].name %>
+                </option>
+                <% } else { %>
+                <option value="<%= sizes[i].id %>"><%=sizes[i].name %></option>
+                <% } %> <% } %>
+              </select>
+              <% if(locals.errors && errors.size) {%>
+              <div class="text-danger"><%= errors.size.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <label for="name">Provincia:</label>
-            <select name="province" id="">
-              <% for (let i = 0; i < provinces.length; i++) { %> <% if
-              (provinces[i].id == product.province_id) { %>
-              <option value="<%= provinces[i].id %>" selected>
-                <%=provinces[i].name %>
-              </option>
-              <% } else { %>
-              <option value="<%= provinces[i].id %>">
-                <%=provinces[i].name %>
-              </option>
-              <% } %> <% } %>
-            </select>
-            <% if(locals.errors && errors.province) {%>
-            <div class="text-danger"><%= errors.province.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="name">Bodega:</label>
+              <select name="bodega" id="">
+                <% for (let i = 0; i < bodegas.length; i++) { %> <% if
+                (bodegas[i].id == product.bodega_id) { %>
+                <option value="<%= bodegas[i].id %>" selected>
+                  <%=bodegas[i].name %>
+                </option>
+                <% } else { %>
+                <option value="<%= bodegas[i].id %>">
+                  <%=bodegas[i].name %>
+                </option>
+                <% } %> <% } %>
+              </select>
+              <% if(locals.errors && errors.bodega) {%>
+              <div class="text-danger"><%= errors.bodega.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <label for="name">Categoria:</label>
-            <select name="category" id="">
-              <% for (let i = 0; i < categories.length; i++) { %> <% if
-              (categories[i].id == product.category_id) { %>
-              <option value="<%= categories[i].id %>" selected>
-                <%=categories[i].name %>
-              </option>
-              <% } else { %>
-              <option value="<%= categories[i].id %>">
-                <%=categories[i].name %>
-              </option>
-              <% } %> <% } %>
-            </select>
-            <% if(locals.errors && errors.category) {%>
-            <div class="text-danger"><%= errors.category.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="name">Provincia:</label>
+              <select name="province" id="">
+                <% for (let i = 0; i < provinces.length; i++) { %> <% if
+                (provinces[i].id == product.province_id) { %>
+                <option value="<%= provinces[i].id %>" selected>
+                  <%=provinces[i].name %>
+                </option>
+                <% } else { %>
+                <option value="<%= provinces[i].id %>">
+                  <%=provinces[i].name %>
+                </option>
+                <% } %> <% } %>
+              </select>
+              <% if(locals.errors && errors.province) {%>
+              <div class="text-danger"><%= errors.province.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <p><label>Detalle de producto</label></p>
-            <textarea
-              id="descripcion"
-              name="descripcion"
-              rows="10"
-              class="description-input"
-              cols="40"
-            >
+            <div class="label-input">
+              <label for="name">Categoria:</label>
+              <select name="category" id="">
+                <% for (let i = 0; i < categories.length; i++) { %> <% if
+                (categories[i].id == product.category_id) { %>
+                <option value="<%= categories[i].id %>" selected>
+                  <%=categories[i].name %>
+                </option>
+                <% } else { %>
+                <option value="<%= categories[i].id %>">
+                  <%=categories[i].name %>
+                </option>
+                <% } %> <% } %>
+              </select>
+              <% if(locals.errors && errors.category) {%>
+              <div class="text-danger"><%= errors.category.msg %></div>
+              <% } %>
+            </div>
+
+            <div class="label-input">
+              <p><label>Detalle de producto</label></p>
+              <textarea
+                id="descripcion"
+                name="descripcion"
+                rows="10"
+                class="description-input"
+                cols="40"
+              >
 <%= product.descripcion %></textarea
-            >
-            <% if(locals.errors && errors.descripcion) {%>
-            <div class="text-danger"><%= errors.descripcion.msg %></div>
-            <% } %>
-          </div>
+              >
+              <% if(locals.errors && errors.descripcion) {%>
+              <div class="text-danger"><%= errors.descripcion.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="label-input">
-            <label for="">Imagen:</label>
-            <input type="file" name="foto" class="input-foto" />
-            <% if(locals.errors && errors.image) {%>
-            <div class="text-danger"><%= errors.image.msg %></div>
-            <% } %>
-          </div>
+            <div class="label-input">
+              <label for="">Imagen:</label>
+              <input type="file" name="foto" class="input-foto" />
+              <% if(locals.errors && errors.image) {%>
+              <div class="text-danger"><%= errors.image.msg %></div>
+              <% } %>
+            </div>
 
-          <div class="form-label">
-            <input type="submit" class="boton-crear" value="Guadar cambios" />
-          </div>
+            <div class="form-label">
+              <input type="submit" class="boton-crear" value="Guadar cambios" />
+            </div>
 
-          <div class="label-input">
-            <a class="boton-cancel" href="/products">Volver a productos</a>
-          </div>
-          <div class="label-input">
-            <a class="boton-delete" href="/products/delete/<%=product.id%>">
-              Eliminar</a
-            >
-          </div>
-        </form>
+            <div class="label-input">
+              <a class="boton-cancel" href="/products">Volver a productos</a>
+            </div>
+            <div class="label-input">
+              <a class="boton-delete" href="/products/delete/<%=product.id%>">
+                Eliminar</a
+              >
+            </div>
+          </form>
+        </div>
       </div>
     </main>
     <%- include('../partials/footer.ejs')%>
