corregido size e index

--- a/src/views/products/detalles.ejs
+++ b/src/views/products/detalles.ejs
@@ -72,7 +72,7 @@
               </div>
 
               <div class="details tamanio">
-                <p><%= product.size%> cc</p>
+                <p><%=product.size.name%></p>
               </div>
 
               <div class="contenedor-precio-descuento">
