--- a/src/views/products/index.ejs
+++ b/src/views/products/index.ejs
@@ -21,19 +21,20 @@
           <li id="slide3">
             <img src="/Images/slides/thumb_67911_slider_big.jpeg">
         </ul>
-        <div class="controles">
-          <ul>
+
+        <ul class="controles">
             <li><a href="#slide1">1</a></li>
             <li><a href="#slide2">2</a></li>
             <li><a href="#slide3">3</a></li>
-          </ul>
-        </div>
+        </ul>
+      </div>
 
-        <div class="display-pag">
+
+        <div class="display-pag" style="padding-bottom: 30px">
           <section>
             <div class="contenedor-todo-productos">
               <div class="contenedor-titulo">
-                <h2 class="titulo">DESTACADOS</h2>
+                <h1 class="titulo" style="text-align: center;">DESTACADOS</h1>
               </div>
   
               <div class="contenedor-productos">
@@ -88,7 +89,7 @@
             </div>
           </section>
         </div>
-        </div>
+      
 
     
     </main>
