--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -1,5 +1,5 @@
 main{
-    background-color: #f2f2f2;
+    background-color: white;
     padding: 0px;
 }
 body{
@@ -25,25 +25,29 @@ ul.slider{
 }
 ul.slider li{
     position: absolute;
+    left: 0px;
+    top: 0px;
+    opacity: 0;
     width: inherit;
     height: inherit;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 1s;  
-}
-ul.slider li:first-child{
-    opacity: 1;
+    transition: opacity .5s;
+    background: #fff;
 }
 ul.slider li img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
+ul.slider li:first-child{
+    opacity: 1;
+}
+ul.slider li:target {
+    opacity: 1;
+    /*Mostramos el <li> del enlace que pulsemos*/
+}
 .controles{
     text-align: center;
-    margin: 20px 0;
+    margin: 20px;
 }
 .controles li{
     display: inline-block;
@@ -51,11 +55,11 @@ ul.slider li img{
 }
 .controles li a{
     display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #ccc;
-    margin: 0 5px;
-    text-indent: -9999px;
-    transition: background .5s;
+    color: grey;
+    text-decoration: none;
+    background-color: grey;
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    border-radius: 100%;
 }
