--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -15,7 +15,50 @@
             <div class="contenedor-titulo">
               <h2 class="titulo">Todos los productos</h2>
             </div>
-
+            
+            <div class="contenedor-filtro">
+              <p>
+                  En esta sección vas a encontrar una amplia variedad de bodegas de todo el mundo. 
+                  Podés filtrar por país, provincia o región para encontrar la bodega que más te guste.
+              </p>
+              <ul class="list-inline" id="producer-filter">
+                  <li>
+                      <b>Seleccioná una ubicación</b><br>
+                      <select id="map_filter_location">
+                          <option value="">Provincias</option>
+                          <option value="Catamarca">Catamarca</option>
+                          <option value="Cordoba">Cordoba</option>
+                          <option value="La Rioja">La Rioja</option>
+                          <option value="Mendoza">Mendoza</option>
+                          <option value="Neuquen">Neuquen</option>
+                          <option value="Rio Negro">Rio Negro</option>
+                          <option value="Salta">Salta</option>
+                          <option value="San Juan">San Juan</option>
+                      </select>  
+                  </li>
+                  <li>
+                      <b>Seleccioná una bodega</b><br>
+                      <select id="map_filter_bodega">
+                          <option value="">Bodegas</option>
+                          <option value="Bianchi">Bianchi</option>
+                          <option value="Bodega del Fin del Mundo">Bodega del Fin del Mundo</option>
+                          <option value="Bodega Catena Zapata">Bodega Catena Zapata</option>
+                          <option value="El Esteco">El Esteco</option>
+                          <option value="Finca Las Moras">Finca Las Moras</option>
+                          <option value="Luigi Bosca">Luigi Bosca</option>
+                          <option value="Navarro Correas">Navarro Correas</option>
+                          <option value="Nieto Senetiner">Nieto Senetiner</option>
+                          <option value="Norton">Norton</option>
+                          <option value="Rutini">Rutini</option>
+                          <option value="Salentein">Salentein</option>
+                          <option value="Trapiche">Trapiche</option>
+                          <option value="Zapata">Zapata</option>
+                          <option value="Zuccardi">Zuccardi</option>                 
+                      </select>  
+                  </li>
+              </ul>
+          </div>
+          
             <div class="contenedor-productos">
               <%products.forEach(product => {%>
 
