--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -65,7 +65,7 @@
           <a href="/FAQ">FAQ</a>
         </div>
         <div class="margen-contacto">
-          <a href="/productos">Productos</a>
+          <a href="/products">Productos</a>
         </div>
         <div class="margen-contacto">
           <a href="/terminos-y-condiciones">Términos y condiciones</a>
