--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -10,55 +10,50 @@
       <a href="/"><i class="fa-solid fa-angle-left"></i> Volver</a>
     </div>
     <div class="box-product">
+
       <div class="box-img-price-description">
-        <img
-          class="wine"
-          src="/images/productImages/Serbal-Pinot Noir.jpeg"
-          alt="WineHouse"
-        />
+        <img class="wine" src="/images/productImages/1675122724044_img.webp" alt="Imagen de El Esteco Old Vines"/>
         <div class="price">$1.750</div>
-        <div class="description">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-          possimus itaque esse neque laudantium eos beatae iste, molestiae,
-          ipsam facilis nemo vero animi assumenda.
-        </div>
       </div>
+
       <div class="bottom-product-box">
         <div class="box-cantidad-delete">
           <div class="cantidad">
             <i class="fa-solid fa-minus"></i> 1 <i class="fa-solid fa-plus"></i>
           </div>
         </div>
+
         <div class="delete">
           <div>eliminar <i class="fa-solid fa-trash-can"></i></div>
         </div>
       </div>
     </div>
+
     <div class="box-desktop">
       <div class="box-list">
         <div class="column">
           <div class="box-title">Producto</div>
-          <img
-            class="wine"
-            src="/images/productImages/Serbal-Pinot Noir.jpeg"
-            alt="WineHouse"
-          />
+          <img class="wine" src="/images/productImages/1675122724044_img.webp" alt="Imagen de El Esteco Old Vines"/>
+
         </div>
         <div class="column-special">Serbal Pinot Noir 750cc</div>
         <div class="column">
           <div class="box-title">Precio unitario</div>
           <div class="column-middle">$1.750</div>
         </div>
+
         <div class="column">
           <div class="box-title">Precio cantidad</div>
           <div class="column-middle">
             <i class="fa-solid fa-minus"></i> 2 <i class="fa-solid fa-plus"></i>
           </div>
         </div>
+        
         <div class="column">
           <div class="box-title">Subtotal</div>
           <div class="column-middle">$3.500</div>
         </div>
+
         <div class="column-special">
           <i class="fa-solid fa-trash-can"></i>
         </div>
