--- a/src/views/users/nosotros.ejs
+++ b/src/views/users/nosotros.ejs
@@ -13,7 +13,7 @@
     <main>
         <div class="contenedor-nosotros">
             <img src="/Images/slides/vinito 2.jpeg">
-            <div>
+            <div class="quienes-somos">
                 <h1>
                 Quiénes somos
                 </h1>
