--- a/public/css/bodegas.css
+++ b/public/css/bodegas.css
@@ -35,6 +35,10 @@ body{
     align-items: center;
     border-radius: 5%;
 }
+.bodega:hover{
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    transition: all 300ms ease-in-out;
+}
 .bodega img{
     width: 250px;
     height: 200px;
