--- a/public/css/nosotros.css
+++ b/public/css/nosotros.css
@@ -7,7 +7,6 @@ body{
     font-family: sans-serif;
 }
 .contenedor-nosotros{
-    margin:auto;
     background-color: white;
     width: 100%;
 }
@@ -26,6 +25,12 @@ body{
 }
 .contenedor-nosotros img{
     width: 100%;
-    height: 100%;
+    height: 500px;
     object-fit: cover;
+}
+.quienes-somos{
+    background-color: rgba(0,0,0,0.8);
+    bottom: 300px;
+    position: absolute;
+    color:white;
 }
