--- a/src/views/products/editar-producto.ejs
+++ b/src/views/products/editar-producto.ejs
@@ -19,8 +19,10 @@
             class="contenedor-inputs"
             action="/products/detalles/<%=product.id%>?_method=PUT"
             method="POST"
-            enctype="multipart/form-data"
-          >
+            enctype="multipart/form-data">
+            <div class="errores">
+              <ul></ul>
+            </div>
             <div class="subtitulo">
               <h3>Editando el Producto "<%= product.name %>"</h3>
             </div>
@@ -29,6 +31,7 @@
               <label for="name">Nombre del producto:</label>
               <input
                 type="text"
+                id="name"
                 name="name"
                 class="form-input"
                 value="<%= product.name %>"
@@ -42,6 +45,7 @@
               <label for="price">Precio:</label>
               <input
                 type="number"
+                id="price"
                 step=".01"
                 name="price"
                 class="form-input"
@@ -56,6 +60,7 @@
               <label for="discount">Descuento:</label>
               <input
                 type="number"
+                id="discount"
                 step=".01"
                 name="discount"
                 class="form-input"
@@ -68,7 +73,7 @@
 
             <div class="label-input">
               <label for="discount">Tamaño:</label>
-              <select name="size" id="">
+              <select name="size" id="size">
                 <% for (let i = 0; i < sizes.length; i++) { %> <% if
                 (sizes[i].id == product.size_id) { %>
                 <option value="<%= sizes[i].id %>" selected>
@@ -85,7 +90,7 @@
 
             <div class="label-input">
               <label for="name">Bodega:</label>
-              <select name="bodega" id="">
+              <select name="bodega" id="bodega">
                 <% for (let i = 0; i < bodegas.length; i++) { %> <% if
                 (bodegas[i].id == product.bodega_id) { %>
                 <option value="<%= bodegas[i].id %>" selected>
@@ -104,7 +109,7 @@
 
             <div class="label-input">
               <label for="name">Provincia:</label>
-              <select name="province" id="">
+              <select name="province" id="province">
                 <% for (let i = 0; i < provinces.length; i++) { %> <% if
                 (provinces[i].id == product.province_id) { %>
                 <option value="<%= provinces[i].id %>" selected>
@@ -123,7 +128,7 @@
 
             <div class="label-input">
               <label for="name">Categoria:</label>
-              <select name="category" id="">
+              <select name="category" id="category">
                 <% for (let i = 0; i < categories.length; i++) { %> <% if
                 (categories[i].id == product.category_id) { %>
                 <option value="<%= categories[i].id %>" selected>
