--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -45,8 +45,8 @@
             <a class="link" href="/users/perfil"><i class="fa-solid fa-user"></i><%=locals.isLogged.name%></a>
         </div>
         <% } else { %>
-            <div class="iniciar-sesion-link">
-                <a class="link" href="/users/login">Iniciar sesión</a>
+            
+                <a class="iniciar-sesion-link" href="/users/login">Iniciar sesión</a>
             </div>
             
         <%}%>
