agregando colores al registro

--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -36,6 +36,14 @@ li {
     color: #9BA0A3;
     font-size: 30px;
 }
+.fa-solid, .fas {
+    font-weight: 900;
+    color: #80083F;
+}
+.fa-solid:hover {
+    color:  rgb(129, 22, 129);
+  }
+
 .saludo-logo {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -72,14 +80,20 @@ li {
 .boton{
     display: flex;
     margin: auto;
-    background: purple;
     color: white;
     padding: 8px 43px;
     border-radius: 10px;
-    font-size: 26px;
     margin-bottom: 17px;
+    font-size: 26px;
+    background: #80083F;
     border: none;
+    text-decoration: none;
 }
+.boton:hover {
+    background-color: rgb(129, 22, 129);
+    color: white;
+  }
+
 .letra-chica{
     display: flex;
     justify-content: space-between;
