--- a/public/css/products.css
+++ b/public/css/products.css
@@ -80,8 +80,8 @@ main section article p {
 
 .imagen-producto {
   width: 100%;
-  border-top-right-radius: 1em;
-  border-top-left-radius: 1em;
+  height: 82%;
+  margin-top: 1em;
 }
 
 .no-discount {
