--- a/public/css/detalles.css
+++ b/public/css/detalles.css
@@ -3,7 +3,6 @@ header {
 }
 
 main {
-  display: block;
   padding: 35px 0;
 }
 
@@ -11,8 +10,8 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
   margin: 0 auto;
+  flex-direction: row-reverse;
 }
 
 .ruta-producto {
@@ -25,10 +24,17 @@ main {
   display: flex;
   align-items: center;
 }
+.fa-solid, .fas {
+  font-weight: 900;
+  color: #80083F;
+}
+.fa-solid:hover {
+  color:  rgb(129, 22, 129);
+}
 
 .carrusel {
-  width: 90vw;
-  height: 90vw;
+  width: 60vw;
+  height: 60vw;
   max-width: 600px;
   max-height: 600px;
   margin: 0 auto 20px;
@@ -44,7 +50,7 @@ main {
 }
 
 .contenedor-imagen-carrusel {
-  height: 100%;
+  height: 75%;
 }
 
 .contenedor-minis {
@@ -130,7 +136,7 @@ main {
 
 .agregar-al-carrito {
   color: white;
-  background-color: black;
+  background-color: #80083F;
   display: flex;
   font-weight: bold;
   height: 40px;
@@ -139,9 +145,13 @@ main {
   min-width: 110px;
   justify-content: center;
   align-items: center;
-  border-radius: 5px;
+  border-radius: 10px;
   text-align: center;
   margin: 0;
+}
+.agregar-al-carrito:hover {
+  background-color: rgb(129, 22, 129);
+  color: white;
 }
 
 .boton-agregar {
@@ -279,7 +289,7 @@ main {
 
 @media screen and (min-width: 769px) {
   main {
-    margin: 0 auto;
+    margin-top: 8%;
     width: 90%;
   }
 
@@ -298,6 +308,11 @@ main {
     align-items: center;
     border: solid 1px lightgray;
   }
+  .carrusel{
+    width: auto;
+    height: 38vw;
+    margin: 10px 41px;
+  }
 }
 
 @media screen and (min-width: 1000px) {
@@ -311,9 +326,10 @@ main {
   }
 
   .contenedor-detalles {
-    padding: 20px 40px;
+    padding: 0px 40px;
     display: flex;
     flex-direction: column;
+    margin: 0px 38px;
   }
 
   .cantidad-agregar {
